[project]
name = "no-privacy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgiref>=3.8.1",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "requests-cache>=1.2.1",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "plotly>=6.1.2",
    "seaborn>=0.13.2",
    "nbformat>=5.10.4",
]
